<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".SalesActivity">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <RelativeLayout
                android:id="@+id/headerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/reports_header_bk">

                <TextView
                    android:id="@+id/dateTextView"
                    style="@style/txtPageTitle"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="16dp"
                    android:text="@string/sales"
                    android:textColor="@color/colorWhite" />

                <ImageView
                    android:id="@+id/btnSales"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="86dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="22dp"
                    android:src="@drawable/ic_outline_add_box_48" />

                <TextView
                    android:id="@+id/salesHeaderTextView"
                    android:text="@string/dailysales"
                    android:layout_marginTop="30dp"
                    android:textSize="24sp"
                    style="@style/reportContentText" />

                <TextView
                    style="@style/viewParent.headerText"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/whiteTextColor"
                    android:layout_below="@id/salesHeaderTextView"
                    android:text="@string/dailysalesamount"
                    android:textSize="28sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="70dp"/>

            </RelativeLayout>


            <LinearLayout
                android:id="@+id/cardLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/headerLayout"
                android:layout_marginTop="-80dp">

                <androidx.cardview.widget.CardView
                    app:cardCornerRadius="16dp"
                    app:cardBackgroundColor="@color/whiteTextColor"
                    style="@style/reportsCardStyle">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/reportContentText"
                            android:textColor="@color/colorDarkGreal"
                            android:text="@string/thismonth"/>

                        <TextView
                            style="@style/viewParent.headerText"
                            android:textSize="24sp"
                            android:id="@+id/txtMonthAmount"
                            android:text="@string/monthlyamount"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    app:cardCornerRadius="16dp"
                    app:cardBackgroundColor="@color/whiteTextColor"
                    style="@style/reportsCardStyle">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/reportContentText"
                            android:textColor="@color/colorDarkGreal"
                            android:text="@string/thisweek"/>

                        <TextView
                            style="@style/viewParent.headerText"
                            android:textSize="24sp"
                            android:text="@string/weeklysalesamount"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cardLayout"
                android:orientation="vertical">

                <include layout="@layout/card_sales"/>


            </LinearLayout>


        </RelativeLayout>


    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>