<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/colorDarkGreal"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgLogin"
        android:layout_width="365dp"
        android:layout_height="295dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSignup"
        app:srcCompat="@drawable/ic_login_amico" />

    <EditText
        android:id="@+id/txtLoginPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:drawableLeft="@android:drawable/stat_sys_phone_call"
        android:hint="@string/phone"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogin" />

    <EditText
        android:id="@+id/txtLoginPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableLeft="@android:drawable/ic_lock_lock"
        android:hint="@string/password"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/txtLoginPhone"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/txtLoginPhone"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginPhone" />

    <Button
        android:id="@+id/btnSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/login_shape_bk"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/txtLoginPassword"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/txtLoginPassword"
        app:layout_constraintTop_toBottomOf="@+id/txtLoginPassword" />
    <TextView
        android:id="@+id/txtNoAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnSignin"
        app:layout_constraintStart_toStartOf="@+id/txtLoginPassword"
        android:text="@string/notuser"
        android:textStyle="bold"
        android:textSize="16sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        app:layout_constraintTop_toTopOf="@id/txtNoAccount"
        app:layout_constraintBottom_toBottomOf="@id/txtNoAccount"
        app:layout_constraintStart_toEndOf="@+id/txtNoAccount"
        android:textColor="@color/colorGreal"
        android:text="@string/register"
        android:textStyle="bold"
        android:textSize="16sp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>