<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/whiteTextColor"
    app:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp">
            <LinearLayout
                android:id="@+id/LinearCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/LinearCard2"
                android:orientation="horizontal">
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <ImageView
                        android:id="@+id/salesImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:src="@drawable/ic_cash" />
                </LinearLayout>
                <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                    android:orientation="vertical"
                >

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/salescode"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/salesamount"
                        android:textSize="18sp"
                        android:textStyle="bold" />
            </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/LinearCard2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="@+id/LinearCard"
                app:layout_constraintBottom_toBottomOf="@+id/LinearCard"
                app:layout_constraintEnd_toEndOf="parent"
                >
                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:layout_weight="1"
                    android:text="@string/addItem"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:layout_weight="1"
                    android:text="@string/removeItem"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>