<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/register"
        android:textSize="24dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/colorDarkGreal"
        />

    <LinearLayout
        android:id="@+id/layoutLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegister"
        android:orientation="vertical"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:hint="First name"
            android:inputType="textPersonName"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:layout_weight="1"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:hint="Last name"
            android:inputType="textPersonName"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:layout_weight="1"
            />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:hint="Phone"
                android:inputType="phone"
                android:textAlignment="textStart"
                android:textSize="16sp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1.5"
                android:hint="Email"
                android:inputType="textWebEmailAddress"
                android:textAlignment="textStart"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:hint="@string/password"
                android:inputType="phone"
                android:textAlignment="textStart"
                android:textSize="16sp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:hint="@string/cpassword"
                android:inputType="textWebEmailAddress"
                android:textAlignment="textStart"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/txtBusiness"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:hint="@string/password"
                android:inputType="text"
                android:textAlignment="textStart"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/txtAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_weight="1.5"
                android:hint="@string/cpassword"
                android:inputType="text"
                android:textAlignment="textStart"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btnSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/layoutLinear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:text="@string/register"
        android:textStyle="bold"
        android:textSize="18sp"
        android:background="@drawable/login_shape_bk"
        />
    <TextView
        android:id="@+id/txtAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/btnSignup"
        app:layout_constraintStart_toStartOf="@id/layoutLinear"
        android:text="@string/haveaccount"
        android:textSize="16sp"
        android:textStyle="bold"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        app:layout_constraintTop_toTopOf="@+id/txtAccount"
        app:layout_constraintStart_toEndOf="@+id/txtAccount"
        app:layout_constraintBottom_toBottomOf="@id/txtAccount"
        android:text="Sign in"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/colorGreal"
        />


</androidx.constraintlayout.widget.ConstraintLayout>